# amd-hackathon-2026

./: .gitignore  CLAUDE.md  Dockerfile.serve  Dockerfile.train  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
abliterate/: abliterate_arditi.py  refusal_benchmark.py  run_heretic.sh  run_heretic_auto.py  test_arch_compat.py
docs/: ABLITERATION_PLAYBOOK.md  ARCHITECTURE.md  BUILD_IN_PUBLIC.md  DATASETS.md  JOURNEY.md  SAFETY.md  STATE.md  TRAINING_PROGRESS.md
eval/: build_refusal_465.py  domain_qa.jsonl  lm_eval_harness.sh  perplexity_drift.py  refusal_465.jsonl
frontend/: next.config.ts  package.json
frontend/app/: layout.tsx  page.tsx
gateway/: audit_log.py  llama_guard.py  policy.yaml
quantize/: MODEL_CARD_GGUF.md  convert.sh  imatrix.sh  ladder.sh  push_gguf.sh
serve/: llamacpp.env  m4_failover.sh  vllm.env
train/: config.yaml  fetch_v4.py  merge_and_push.py  merge_and_push_v2.py  merge_and_push_v3.py  prepare_data.py  profile_8k.py  sources_v4.yaml  train_lora.py  train_v2.py
